[package]
name = "word_frequency_t66"
version = "0.1.0"
authors = ["Danil <knightpp@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
itertools = "0.9"
regex = "1.3.6"

[profile.release]
#debug = true
lto = true
